# python-let_get_start

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
01-python-basics/: README.md
01-python-basics/src/: csv_to_json.py  input.csv  output.json
08-python-web-server/: Dockerfile  README.md  docker-compose.yml  requirements.txt
08-python-web-server/src/app/: main.py
08-python-web-server/src/app/routes/: main.py
10-web-uvicorn/: Dockerfile  pyproject.toml  requirements.txt
10-web-uvicorn/runit/uvicorn-serve/: finish  run
10-web-uvicorn/src/: .env.example
10-web-uvicorn/src/app/: main.py  settings.py
10-web-uvicorn/src/app/models/: transform.py
10-web-uvicorn/src/app/routes/: main.py
12-python-langchain/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
12-python-langchain/src/: 01_simple_chat_model.py  02_simple_chat_model.py  03_prompt_chat_model.py  10_simple_tool.py  30_simple_agent.py
