[tool.poetry]
name = "python course"
version = "0.0.1"
description = "A python App with Docker Deployments"
authors = ["Nocco Giovanni Emanuele"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_chainlit_docker_deployment_template"}]

[tool.poetry.dependencies]
python = "3.11.9"
uvicorn = "0.30.6"
fastapi = "0.109.0"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
