[tool.poetry]
name = "langchain crash course"
version = "0.0.1"
description = "A langchain crash course"
authors = ["Nocco Giovanni Emanuele <giovanni.nocco@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_crash_course"}]


[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
langchain = "0.3.8"
langchain-community = "0.3.8"
langchain-openai = "0.2.9"
langgraph = "0.2.53"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
